crates/ty_server/src/snapshots/ty_server__server__tests__publish_diagnostics_on_did_open.snap
---
source: crates/ty_server/src/server.rs
expression: diagnostics
---
PublishDiagnosticsParams {
    uri: Url {
        scheme: "file",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: None,
        port: None,
        path: "<temp_dir>/src/foo.py",
        query: None,
        fragment: None,
    },
    diagnostics: [
        Diagnostic {
            range: Range {
                start: Position {
                    line: 1,
                    character: 11,
                },
                end: Position {
                    line: 1,
                    character: 13,
                },
            },
            severity: Some(
                Error,
            ),
            code: Some(
                String(
                    "invalid-return-type",
                ),
            ),
            code_description: Some(
                CodeDescription {
                    href: Url {
                        scheme: "https",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: Some(
                            Domain(
                                "ty.dev",
                            ),
                        ),
                        port: None,
                        path: "/rules",
                        query: None,
                        fragment: Some(
                            "invalid-return-type",
                        ),
                    },
                },
            ),
            source: Some(
                "ty",
            ),
            message: "Return type does not match returned value: expected `str`, found `Literal[42]`",
            related_information: Some(
                [
                    DiagnosticRelatedInformation {
                        location: Location {
                            uri: Url {
                                scheme: "file",
                                cannot_be_a_base: false,
                                username: "",
                                password: None,
                                host: None,
                                port: None,
                                path: "<temp_dir>/src/foo.py",
                                query: None,
                                fragment: None,
                            },
                            range: Range {
                                start: Position {
                                    line: 0,
                                    character: 13,
                                },
                                end: Position {
                                    line: 0,
                                    character: 16,
                                },
                            },
                        },
                        message: "Expected `str` because of return type",
                    },
                ],
            ),
            tags: None,
            data: None,
        },
    ],
    version: Some(
        1,
    ),
}
